# tree-sitter-jdw-billboarding

./: BILLBOARD_SPEC.md  CMakeLists.txt  Cargo.toml  Makefile  PUBLISH.md  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-jdw-billboarding.pc.in
bindings/c/tree_sitter/: tree-sitter-jdw-billboarding.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jdw_billboarding/: binding.c
bindings/python/tree_sitter_jdw_billboarding.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJdwBillboardingTests/: TreeSitterJdwBillboardingTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: lines.txt  tracks.txt
